--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <div id="container">
 <div id="profile"> <img  src="./assets/avatar.png" alt="imagem-profile">
-<p>@MaykBrito</p>
+<p>Lucas Madeira </p>
 </div>
 <div id="switch" onclick="toggleMode()">
     <button></button>
@@ -28,10 +28,11 @@
     <li><a href="#" target="_blank">Link 04</a> </li>
 </ul>
 <div id="social-links"> 
-    <a href="#" target="_blank" ><ion-icon name="logo-github"></ion-icon></a>
-    <a href="#" target="_blank" ><ion-icon name="logo-instagram"></ion-icon> </a>
-    <a href="#" target="_blank" > <ion-icon name="logo-youtube"></ion-icon></a>
-    <a href="#" target="_blank" > <ion-icon name="logo-linkedin"></ion-icon></a> 
+    <a href="https://github.com/lucasmadeiradev" target="_blank" ><ion-icon name="logo-github"></ion-icon></a>
+    <a href="https://wa.me/5548991821827" target="_blank" > <ion-icon name="logo-whatsapp"></ion-icon></a>
+    <a href="https://www.instagram.com/ldmadeira/" target="_blank" ><ion-icon name="logo-instagram"></ion-icon> </a>
+   <!-- <a href="#" target="_blank" > <ion-icon name="logo-youtube"></ion-icon></a> -->
+    <a href="https://www.linkedin.com/in/lucas-madeira-dev/" target="_blank" > <ion-icon name="logo-linkedin"></ion-icon></a> 
 </div>
 <footer>Feito com ♥ pelo <a href="#" target="_blank" >Lucas Madeira</a></footer>
   </div>
